--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -1,11 +1,18 @@
-<div th:fragment="sidebar">
-	<div class="col-md-3">
-		<div class="sidebar">
-			<a class="nav-link ${currentPage == 'home' ? 'active bg-primary' : ''}" href="/">Home</a>
-			<a class="nav-link ${currentPage == 'alunos' ? 'active bg-primary' : ''}" href="/alunos">Alunos</a>
-			<a class="nav-link ${currentPage == 'professores' ? 'active bg-primary' : ''}"
-				href="/professores">Professores</a>
-			<a class="nav-link ${currentPage == 'turmas' ? 'active bg-primary' : ''}" href="/turmas">Turmas</a>
-		</div>
-	</div>
+<div th:fragment="sidebar" class="sidebar">
+	<a class="nav-link" th:classappend="${currentPage == 'home' ? 'active' : ''}" href="/">
+		<i class="fas fa-home"></i>
+		<span>Home</span>
+	</a>
+	<a class="nav-link" th:classappend="${currentPage == 'alunos' ? 'active' : ''}" href="/alunos">
+		<i class="fas fa-user-graduate"></i>
+		<span>Alunos</span>
+	</a>
+	<a class="nav-link" th:classappend="${currentPage == 'professores' ? 'active' : ''}" href="/professores">
+		<i class="fas fa-chalkboard-teacher"></i>
+		<span>Professores</span>
+	</a>
+	<a class="nav-link" th:classappend="${currentPage == 'turmas' ? 'active' : ''}" href="/turmas">
+		<i class="fas fa-users"></i>
+		<span>Turmas</span>
+	</a>
 </div>
