--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,4 +3,78 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Index</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<style>
+		body {
+			background-color: #333;
+			color: #fff;
+			margin: 0;
+			padding-left: 16rem;
+			/* Espaçamento para a sidebar */
+		}
+
+		.sidebar {
+			background-color: #222;
+			min-width: 15rem;
+			/* Tamanho mínimo da sidebar */
+			position: fixed;
+			top: 4.375rem;
+			/* Distância do topo */
+			left: 1.25rem;
+			/* Distância da esquerda */
+			padding: 0.625rem;
+			border-radius: 0.5rem;
+		}
+
+		.sidebar a {
+			display: flex;
+			align-items: center;
+			padding: 0.625rem;
+			color: #fff;
+			text-decoration: none;
+			border-radius: 0.5rem;
+		}
+
+		.sidebar a i {
+			margin-right: 0.625rem;
+		}
+
+		.sidebar a:not(.active):hover {
+			background-color: #555;
+		}
+
+		.sidebar a+a {
+			margin-top: 0.625rem;
+		}
+
+		.sidebar .active {
+			background-color: #007bff;
+			font-weight: bold;
+		}
+
+		.header {
+			background-color: #222;
+			padding: 0.625rem;
+			display: flex;
+			align-items: center;
+			position: fixed;
+			width: 100%;
+			z-index: 1;
+			/* Certifique-se de que o header esteja acima da sidebar */
+			top: 0;
+			left: 0;
+		}
+
+		.logo {
+			color: #fff;
+			font-weight: bold;
+			margin-left: 0.625rem;
+		}
+
+		.container {
+			margin-top: 6.25rem;
+			/* Aumentamos a margem para acomodar o header e a sidebar */
+			padding: 1.25rem;
+		}
+	</style>
 </div>
