--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,7 +1,3 @@
-<div th:fragment="header">
-	<header class="bg-light p-3">
-		<div class="container">
-			<span class="font-weight-bold">Logo</span>
-		</div>
-	</header>
+<div th:fragment="header" class="header">
+	<span class="logo">TJW Pedro</span>
 </div>
