--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,23 +2,18 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Index</title>
+	<title>Home</title>
 	<div th:replace="fragments/head"></div>
 </head>
 
 <body>
-	<div id="app">
-		<div th:replace="fragments/header"></div>
+	<div th:replace="fragments/sidebar"></div>
 
-		<div id="main" class="container mt-4">
-			<div class="row">
-				<div th:replace="fragments/sidebar"></div>
-				<div class="col-md-9">
-					<h1>Bem-vindo à página inicial</h1>
-					<p>Esta é a página inicial do seu projeto.</p>
-				</div>
-			</div>
-		</div>
+	<div th:replace="fragments/header"></div>
+
+	<div class="container">
+		<h1>Bem-vindo à página inicial</h1>
+		<p>Esta é a página inicial do seu projeto.</p>
 	</div>
 
 	<div th:replace="fragments/scripts"></div>
