--- a/src/main/resources/templates/default.html
+++ b/src/main/resources/templates/default.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 
 <head>
     <title>Index</title>
-    <div th:replace="fragments/head"></div>
+    <div th:replace="~{fragments/head}"></div>
 </head>
 
 <body>
-    <div th:replace="fragments/sidebar"></div>
+    <div th:replace="~{fragments/sidebar}"></div>
 
-    <div th:replace="fragments/header"></div>
+    <div th:replace="~{fragments/header}"></div>
 
     <div class="container">
     </div>
 
-    <div th:replace="fragments/scripts"></div>
+    <div th:replace="~{fragments/scripts}"></div>
 </body>
 
 </html>
