--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,6 +4,8 @@
 	<title>Index</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<style>
 		body {
 			background-color: #333;
@@ -75,6 +77,12 @@
 			margin-top: 6.25rem;
 			/* Aumentamos a margem para acomodar o header e a sidebar */
 			padding: 1.25rem;
+		}
+
+		.card-container {
+			background-color: #222;
+			padding: 0.625rem;
+			border-radius: 0.5rem;
 		}
 	</style>
 </div>
