--- a/src/main/resources/templates/editar-aluno.html
+++ b/src/main/resources/templates/editar-aluno.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 
 <head>
-	<title>Cadastrar aluno</title>
+	<title>Editar aluno</title>
 	<div th:replace="~{fragments/head}"></div>
 </head>
 
@@ -14,7 +14,7 @@
 	<div class="container">
 		<div class="row mt-4">
 			<div class="col-md-8">
-				<h2>Cadastrar aluno</h2>
+				<h2>Editar aluno</h2>
 			</div>
 			<div class="col-md-4 text-right">
 				<a href="/alunos" class="btn btn-secondary">
@@ -23,20 +23,20 @@
 			</div>
 		</div>
 		<div class="card-container">
-			<form th:action="@{/students}" method="post">
+			<form th:action="@{/students/{id}(id=${aluno.id})}" th:object="${aluno}" th:method="put">
 				<div class="form-group">
 					<label for="name" class="form-label">Nome:</label>
-					<input type="text" id="name" name="name" class="form-control" required>
+					<input type="text" id="name" name="name" class="form-control" required th:field="*{name}">
 				</div>
 				<div class="form-group">
 					<label for="email" class="form-label">E-mail:</label>
-					<input type="email" id="email" name="email" class="form-control" required>
+					<input type="email" id="email" name="email" class="form-control" required th:field="*{email}">
 				</div>
 				<div class="text-right">
 					<a href="/alunos" class="btn btn-secondary">
 						Cancelar
 					</a>
-					<button type="submit" class="btn btn-primary">Cadastrar</button>
+					<button type="submit" class="btn btn-primary">Salvar</button>
 				</div>
 			</form>
 		</div>
