--- a/src/main/resources/templates/editar-turma.html
+++ b/src/main/resources/templates/editar-turma.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 
 <head>
-	<title>Editar aluno</title>
+	<title>Editar turma</title>
 	<div th:replace="~{fragments/head}"></div>
 </head>
 
@@ -14,26 +14,31 @@
 	<div class="container">
 		<div class="row mt-4">
 			<div class="col-md-8">
-				<h2>Editar aluno</h2>
+				<h2>Editar turma</h2>
 			</div>
 			<div class="col-md-4 text-right">
-				<a href="/alunos" class="btn btn-secondary">
+				<a href="/turmas" class="btn btn-secondary">
 					<i class="fas fa-arrow-left"></i> Voltar
 				</a>
 			</div>
 		</div>
 		<div class="card-container">
-			<form th:action="@{/students/{id}(id=${student.id})}" th:object="${student}" th:method="put">
+			<form th:action="@{/classes/{id}(id=${classe.id})}" th:object="${classe}" th:method="put">
 				<div class="form-group">
 					<label for="name" class="form-label">Nome:</label>
 					<input type="text" id="name" name="name" class="form-control" required th:field="*{name}">
 				</div>
 				<div class="form-group">
-					<label for="email" class="form-label">E-mail:</label>
-					<input type="email" id="email" name="email" class="form-control" required th:field="*{email}">
+					<label for="professor" class="form-label">Professor:</label>
+					<select id="professor" name="professor" class="form-control" required th:field="*{professor.id}">
+						<option value="">Selecione um professor</option>
+						<!-- Iteração sobre a lista de professores -->
+						<option th:each="professor : ${professors}" th:value="${professor.id}"
+							th:text="${professor.name}"></option>
+					</select>
 				</div>
 				<div class="text-right">
-					<a href="/alunos" class="btn btn-secondary">
+					<a href="/turmas" class="btn btn-secondary">
 						Cancelar
 					</a>
 					<button type="submit" class="btn btn-primary">Salvar</button>
