--- a/src/main/resources/templates/cadastro-professor.html
+++ b/src/main/resources/templates/cadastro-professor.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 
 <head>
-	<title>Editar aluno</title>
+	<title>Cadastrar professor</title>
 	<div th:replace="~{fragments/head}"></div>
 </head>
 
@@ -14,29 +14,29 @@
 	<div class="container">
 		<div class="row mt-4">
 			<div class="col-md-8">
-				<h2>Editar aluno</h2>
+				<h2>Cadastrar professor</h2>
 			</div>
 			<div class="col-md-4 text-right">
-				<a href="/alunos" class="btn btn-secondary">
+				<a href="/professores" class="btn btn-secondary">
 					<i class="fas fa-arrow-left"></i> Voltar
 				</a>
 			</div>
 		</div>
 		<div class="card-container">
-			<form th:action="@{/students/{id}(id=${student.id})}" th:object="${student}" th:method="put">
+			<form th:action="@{/professors}" method="post">
 				<div class="form-group">
 					<label for="name" class="form-label">Nome:</label>
-					<input type="text" id="name" name="name" class="form-control" required th:field="*{name}">
+					<input type="text" id="name" name="name" class="form-control" required>
 				</div>
 				<div class="form-group">
 					<label for="email" class="form-label">E-mail:</label>
-					<input type="email" id="email" name="email" class="form-control" required th:field="*{email}">
+					<input type="email" id="email" name="email" class="form-control" required>
 				</div>
 				<div class="text-right">
-					<a href="/alunos" class="btn btn-secondary">
+					<a href="/professores" class="btn btn-secondary">
 						Cancelar
 					</a>
-					<button type="submit" class="btn btn-primary">Salvar</button>
+					<button type="submit" class="btn btn-primary">Cadastrar</button>
 				</div>
 			</form>
 		</div>
