--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -84,5 +84,9 @@
 			padding: 0.625rem;
 			border-radius: 0.5rem;
 		}
+
+		.card-container+.card-container {
+			margin-top: 0.625rem;
+		}
 	</style>
 </div>
