--- a/src/main/resources/templates/enroll-students.html
+++ b/src/main/resources/templates/enroll-students.html
@@ -46,7 +46,7 @@
 				</tbody>
 			</table>
 			<div class="text-right">
-				<button type="submit" class="btn btn-primary" onclick="submitAlunos()">Salvar</button>
+				<button type="submit" class="btn btn-success" onclick="submitAlunos()">Salvar</button>
 			</div>
 		</div>
 	</div>
