--- a/src/main/resources/templates/enroll-students.html
+++ b/src/main/resources/templates/enroll-students.html
@@ -54,103 +54,105 @@
 	<div th:replace="~{fragments/scripts}"></div>
 
 	<script>
-		const students = [];
+		const students = []
+
+		console.log(`[[${classe.students}]]`)
 
 		document.addEventListener('DOMContentLoaded', function () {
 			fetch(`/classes/[[${classe.id}]]`)
 				.then(response => {
 					if (!response.ok) {
-						throw new Error('Erro ao obter os alunos matriculados.');
+						throw new Error('Erro ao obter os alunos matriculados.')
 					}
-					return response.json();
+					return response.json()
 				})
 				.then(data => {
 					students.push(...data.students)
 					atualizarTabelaAlunos()
 				})
 				.catch(error => {
-					console.error(error);
-				});
-		});
+					console.error(error)
+				})
+		})
 
 		function adicionarAluno() {
-			const emailInput = document.getElementById('email');
-			const email = emailInput.value.trim();
+			const emailInput = document.getElementById('email')
+			const email = emailInput.value.trim()
 
 			if (email === '') {
-				alert('Por favor, insira um email válido.');
-				return;
+				alert('Por favor, insira um email válido.')
+				return
 			}
 
 			// Verifica se o aluno já foi adicionado
 			if (students.find((student) => student.email === email)) {
-				alert('Este aluno já foi adicionado.');
-				return;
+				alert('Este aluno já foi adicionado.')
+				return
 			}
 
 			fetch(`/students/first?email=${email}`)
 				.then(response => {
 					if (!response.ok) {
-						throw new Error('Email não encontrado.');
+						throw new Error('Email não encontrado.')
 					}
-					return response.json();
+					return response.json()
 				})
 				.then(data => {
 					const student = {
 						id: data.id,
 						name: data.name,
 						email: data.email,
-					};
-					students.push(student);
+					}
+					students.push(student)
 
 					// Limpa o input de email
-					emailInput.value = '';
+					emailInput.value = ''
 
 					// Atualiza a tabela de alunos adicionados
-					atualizarTabelaAlunos();
+					atualizarTabelaAlunos()
 				})
 				.catch(error => {
-					alert(error.message);
-				});
+					alert(error.message)
+				})
 		}
 
 		function removerAluno(id) {
-			const index = students.findIndex((student) => student.id === id);
+			const index = students.findIndex((student) => student.id === id)
 			if (index !== -1) {
-				students.splice(index, 1);
-				atualizarTabelaAlunos();
+				students.splice(index, 1)
+				atualizarTabelaAlunos()
 			}
 		}
 
 		function atualizarTabelaAlunos() {
-			const tabelaBody = document.getElementById('students-table-body');
-			tabelaBody.innerHTML = '';
+			const tabelaBody = document.getElementById('students-table-body')
+			tabelaBody.innerHTML = ''
 
 			students.forEach((student) => {
-				const row = document.createElement('tr');
+				const row = document.createElement('tr')
 
-				const idCell = document.createElement('td');
-				idCell.textContent = student.id;
-				row.appendChild(idCell);
+				const idCell = document.createElement('td')
+				idCell.textContent = student.id
+				row.appendChild(idCell)
 
-				const nameCell = document.createElement('td');
-				nameCell.textContent = student.name;
-				row.appendChild(nameCell);
+				const nameCell = document.createElement('td')
+				nameCell.textContent = student.name
+				row.appendChild(nameCell)
 
-				const emailCell = document.createElement('td');
-				emailCell.textContent = student.email;
-				row.appendChild(emailCell);
+				const emailCell = document.createElement('td')
+				emailCell.textContent = student.email
+				row.appendChild(emailCell)
 
-				const acoesCell = document.createElement('td');
-				const removerBtn = document.createElement('button');
-				removerBtn.classList.add('btn', 'btn-danger');
-				removerBtn.innerHTML = '<i class="fas fa-trash"></i>'; // Ícone de lixeira
-				removerBtn.addEventListener('click', () => removerAluno(student.id));
-				acoesCell.appendChild(removerBtn);
-				row.appendChild(acoesCell);
+				const acoesCell = document.createElement('td')
+				const removerBtn = document.createElement('button')
+				removerBtn.classList.add('btn', 'btn-danger')
+				removerBtn.innerHTML = '<i class="fas fa-trash"></i>' // Ícone de lixeira
+				removerBtn.addEventListener('click', () => removerAluno(student.id))
+				acoesCell.appendChild(removerBtn)
+				row.appendChild(acoesCell)
 
-				tabelaBody.appendChild(row);
-			});
+				tabelaBody.appendChild(row)
+			})
 		}
 
 		function submitAlunos() {
@@ -163,21 +165,21 @@
 			})
 				.then(response => {
 					if (response.ok) {
-						return response.json();
+						return response.json()
 					} else {
-						throw new Error('Erro ao enviar alunos matriculados.');
+						throw new Error('Erro ao enviar alunos matriculados.')
 					}
-					alert('Alunos matriculados com sucesso!');
+					alert('Alunos matriculados com sucesso!')
 				})
 				.then(data => {
 					if (data.redirect) {
 						// Redireciona para a página desejada
-						window.location.href = data.redirect;
+						window.location.href = data.redirect
 					}
 				})
 				.catch(error => {
-					alert(error.message);
-				});
+					alert(error.message)
+				})
 		}
 	</script>
 </body>
