--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 
 	<div class="container">
 		<h1>Bem-vindo à página inicial</h1>
-		<p>Esta é a página inicial do seu projeto.</p>
+		<p>Esta é a página inicial do projeto.</p>
 	</div>
 
 	<div th:replace="~{fragments/scripts}"></div>
