--- a/src/main/resources/templates/professores.html
+++ b/src/main/resources/templates/professores.html
@@ -46,7 +46,7 @@
 
 	<div th:replace="~{fragments/scripts}"></div>
 	<script>
-		fetch('http://localhost:8080/professors')
+		fetch('/professors')
 			.then(response => response.json())
 			.then(data => {
 				data.forEach(professor => {
