--- a/src/main/resources/templates/turmas.html
+++ b/src/main/resources/templates/turmas.html
@@ -46,7 +46,7 @@
 
 	<div th:replace="~{fragments/scripts}"></div>
 	<script>
-		fetch('http://localhost:8080/classes')
+		fetch('/classes')
 			.then(response => response.json())
 			.then(data => {
 				data.forEach(classe => {
